Optimize accessing edge properties and Int2IntHashMap value iteration.